tests/codegen/fail/union/trait_non_object_variant.stderr
error[E0277]: the trait bound `Test: GraphQLObject<__S>` is not satisfied
 --> fail/union/trait_non_object_variant.rs:9:1
  |
9 | #[graphql_union]
  | ^^^^^^^^^^^^^^^^ the trait `GraphQLObject<__S>` is not implemented for `Test`
  |
  = help: the following other types implement trait `GraphQLObject<S>`:
            <Box<T> as GraphQLObject<S>>
            <juniper::meta::Field<'a, S> as GraphQLObject<S>>
            <Argument<'a, S> as GraphQLObject<S>>
            <EnumValue as GraphQLObject<__S>>
            <SchemaType<'a, S> as GraphQLObject<S>>
            <juniper::schema::model::TypeType<'a, S> as GraphQLObject<S>>
            <juniper::schema::model::DirectiveType<'a, S> as GraphQLObject<S>>
            <Arc<T> as GraphQLObject<S>>
            <&T as GraphQLObject<S>>
  = note: this error originates in the attribute macro `graphql_union` (in Nightly builds, run with -Z macro-backtrace for more info)
